--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
